[tool.poetry]
name = "AssacCore"
version = "0.0.1"
description = "아삭코어"
authors = ["UniqueCode"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/UniqueCodeGit/AssacCore"

[tool.poetry.dependencies]
python = "^3.8"
tornado = "^6.1"
pymongo = {extras = ["srv"], version = "^3.12.0"}
odmantic = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
